welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:14: error: reassignment to val
			n1 = n1 + table(n1 - 1) - 1; 
                           ^