welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	 var n1: Int = 0;
	 var table = new Array[Int](num);

	 for(n1 <- 1 to num){
		if(n1 == 1){
			table(n1 - 1) = 1;
		}
		else{
			table(n1 - 1) = table(n1 - 2);
			for(n2 <- 1 to table(n1 - 1) - 1){
				table(n1 + n2 - 1) = table(n1 - 1)
			}
			n1 = n1 + table(n1 - 1) - 1; 
		}
	 	
	 }
	 return table(n1);
}

